--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,13 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+transformers = "4.30.2"
+datasets = "^2.15.0"
+torch = "^2.1.1"
+peft = "^0.6.2"
+jieba = "^0.42.1"
+rouge-chinese = "^1.0.3"
+nltk = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
