--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ peft = "^0.6.2"
 jieba = "^0.42.1"
 rouge-chinese = "^1.0.3"
 nltk = "^3.8.1"
+sentencepiece = "^0.1.99"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
